--- a/css/style.css
+++ b/css/style.css
@@ -484,3 +484,71 @@ gallery CSS end
 /* ==================================
  our team CSS end
 ====================================*/
+
+
+/* ==================================
+ testimonial CSS end
+====================================*/
+#testimonial .testimonial-bg{
+    background: url(../images/testimonial-bg.jpg);
+    position: relative;
+    z-index: 1;
+    padding-top: 30px;
+    padding-bottom: 80px;
+    padding-top: 25px;
+}
+#testimonial .testimonial-bg::after{
+    content: '';
+    height: 100%;
+    width: 100%;
+    background: var(--over8);
+    position: absolute;inset: 0;
+    z-index: -1;
+
+}
+#testimonial .testimonial-bg .testimonial-item .testimonial-text p{
+    line-height: 18px;
+}
+#testimonial .testimonial-bg .testimonial-item{
+    margin-right: 30px;
+}
+#testimonial .testimonial-bg .testimonial-item .testimonial-person-details .ratings i{
+    color: var(--brand);
+    font-size: 14px;
+
+    
+}
+#testimonial .slick-dots{
+    display: flex;
+    position: absolute;
+    left: 50%;
+    bottom: -60px;
+    transform: translateX(-50%);
+    padding-left: 0;
+
+}
+
+#testimonial .slick-dots li {
+    width: 15px;
+    height: 15px;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    margin-right: 10px;
+    cursor: pointer;
+}
+#testimonial .slick-dots li.slick-active{
+    border-color: var(--brand);
+    background: var(--brand);
+    transform: scale(1.2);
+}
+#testimonial .slick-dots li:last-child{
+    margin-right: 0px;
+}
+#testimonial .slick-dots li button{
+    font-size: 0;
+    border: none;
+    outline: 0;
+}
+/* ==================================
+testimonial CSS end
+====================================*/
